<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="vertical"
        android:background="@color/color_black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Movies"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:textColor="@color/colorwhite"/>
    </LinearLayout>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/swipe_refresh_layout"
    android:layout_marginTop="?attr/actionBarSize"

    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            >
            <com.mkttestprojects.moviedbwithdagger.custom_control.MyanTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Trending_Movies"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/colorTextLightGrey"
                android:textSize="@dimen/txt_size_ex_large"
                />
            <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                android:id="@+id/first_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                ></com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView>
            <com.mkttestprojects.moviedbwithdagger.custom_control.MyanTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Now_Playing"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/colorTextLightGrey"
                android:textSize="@dimen/txt_size_ex_large"
                />
            <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                android:id="@+id/second_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                ></com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView>

            <com.mkttestprojects.moviedbwithdagger.custom_control.MyanTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/colorTextLightGrey"
                android:textSize="@dimen/txt_size_ex_large"
                />
            <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                android:id="@+id/third_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                ></com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView>

            <com.mkttestprojects.moviedbwithdagger.custom_control.MyanTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rated"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_small"
                android:textColor="@color/colorTextLightGrey"
                android:textSize="@dimen/txt_size_ex_large"
                />
            <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                android:id="@+id/fourth_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_small"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="48dp"
                ></com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>